src/argocd/bootstrap-resources/healthchecks/deployments.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: healthchecks
  labels:
    app.kubernetes.io/name: healthchecks
spec:
  replicas: 3
  revisionHistoryLimit: 0 
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: healthchecks
  template:
    metadata:
      labels:
        app.kubernetes.io/name: healthchecks
    spec:
      containers:
      - name: healthchecks
        image: lscr.io/linuxserver/healthchecks:version-v3.9
        ports:
          - containerPort: 8000
            name: http
            protocol: TCP
        livenessProbe:
          httpGet:
            path: /api/v1/status
            port: http
          initialDelaySeconds: 300
          periodSeconds: 10
