src/argocd/bootstrap-resources/healthchecks/services.yml
apiVersion: v1
kind: Service
metadata:
  name: healthchecks
  labels:
    ryanb.tv/app: healthchecks
spec:
  selector:
    app.kubernetes.io/name: healthchecks
  ports:
  - name: http
    protocol: TCP
    port: 8000
    targetPort: http
